Bug 1649678: Add include needed by OpenBSD. r=mjf, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D82531